<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TMK Endline HH-Listing</string>
    <string name="hh02">" کلسٹر کوڈ  "</string>
    <string name="hh03"> اسٹرکچر نمبر </string>
    <string name="hh04">عمارت جو قسم</string>
    <string name="hh04a">"رھائشي "</string>
    <string name="hh04b">"غير رھائشي "</string>
    <string name="hh04c">"اسڪول "</string>
    <string name="hh04d">"مدرسو "</string>
    <string name="hh04e">"صحت مرڪز سرڪاري "</string>
    <string name="hh04f">"صحت مرڪز/ دواخانو پرائيوٽ "</string>
    <string name="hh0496"> دیگر </string>
    <string name="hh04h">"عارضي طور لسٽنگ بند ڪريو "</string>
    <string name="hh04i">"وڌيڪ عمارتون نھ آھن (ڪلسٽر مڪمل ٿي ويو) "</string>
    <string name="confirmcity">ڇا توھان مٿي بيان ڪيل ڳوٺ ۾ موجود آھيو؟</string>
    <string name="hh05">جيڪڏھن رھائشي آھي تھ ڇا ھن عمارت ۾ ھڪ کان وڌيڪ خاندان رھن ٿا؟</string>
    <string name="hh06"> گهرن جو تعداد؟ </string>
    <string name="hh07"> خانداني نمبر </string>
    <string name="hh08">گھراڻي جي سربراھ جو نالو</string>
    <string name="hh09"> گھراڻي جي سربراھ جي پيءُ جو نالو؟ </string>
    <string name="hh10a"> تعداد </string>
    <string name="hh10">ڇا ھن گھراڻي ۾ پنجن سالن کان گھٽ عمر جو ٻار آھي؟</string>
    <string name="hh11">جيڪڏھن ھا ته پنجن سالن کان گھٽ عمر جا ڪل ڪيترا ٻار آھن؟</string>
    <string name="hh12">گھراڻي ۾ 10 کان 19 سالن جي عمر جي عورتن / ڇوڪرين جو تعداد؟</string>
    <string name="hh15"> گھراڻي جي سربراھ جي ذات ؟ </string>
    <string name="hh16">گھراڻي جي ڪل ڀاتين (فردن)جو تعداد؟</string>
    <string name="hh17">ڇا گذريل پنجن سالن دوران ھن گھر جي ڪنھن ڀاتي (فرد) فرد جي وفات ٿي؟</string>
    <string name="hh13">گھراڻي ۾ 10 کان 19 سالن جي عمر جي مردن /  ڇوڪرن جو تعداد؟</string>
    <string name="hh18">جيڪڏھن ھا تھ ڪيترن ڀاتين (فردن) جي وفات ٿي؟</string>
    <string name="hh1801">هڪ مهيني کان گھٽ</string>
    <string name="hh1802">هڪ مهيني کان 11 مهينا</string>
    <string name="hh1803">1 سال کان 4 سال</string>
    <string name="hh1804">5 کان 9 سال</string>
    <string name="hh1805">10 کان 19 سال</string>
    <string name="hh1806">20 کان 49 سال</string>
    <string name="hh1807">49 سالنن کان وڌيڪ</string>
    <string name="hh1901">وفات ڪندڙ فرد جي جنس؟</string>
    <string name="hh1901a">مرد</string>
    <string name="hh1901b">عورت</string>
    <string name="hh1902">فوت ٿيل فرد جي پيدائش جي تاريخ؟</string>
    <string name="hh1902dd">ڏينھن</string>
    <string name="hh1902mm">مھينا</string>
    <string name="hh1902yy">سال</string>
    <string name="hh1903">وفات ڪرڻ وقت ان جي عمر؟</string>
    <string name="hh1903dd">ڏينھن</string>
    <string name="hh1903mm">مھينا</string>
    <string name="hh1903yy">سال</string>
    <string name="hh1904">وفات جو سبب</string>
    <string name="hh20">ڇا توھان جي گھر ۾ گذريل پنجن سالن ۾ ڪنھن زندھ ٻار جي پئدائش ٿي؟</string>
    <string name="hh21">جيڪڏھن ھا ته ڪيترا زندھ ٻار پيدا ٿيا؟</string>
    <string name="hhIsNewFam">ڇا ھن عمارت ۾ ڪو ٻيو / وڌيڪ خاندان رھي ٿو؟</string>
    <string name="hh14">ڇا اها جڳهه رهائشي مقصدن لاءِ استعمال ڪئي پئي وڃي؟ </string>
    <string name="na101a"> ڪلسٽر/ بلاڪ نمبر </string>
    <string name="na101b"> يونين ڪائونسل </string>
    <string name="na101c"> ڳوٺ/ پاڙي </string>
    <string name="na101d">  ڳوٺ جو ڪوڊ </string>
    <string name="yes"> ھا </string>
    <string name="no"> نه </string>
    <string name="delete"> Delete this HH </string>
    <string name="lstWarning">کیا یہ پہلا ٹیب ہے جو اس کلسٹر میں استعمال ہوتا ہے؟</string>
    <string name="name"> نالو </string>
    <string name="num"> نمبر </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>

    <string name="death_heading">گذريل پنجن سالن جي دوران توهان پنهنجي خاندان ۾ ٿيل  (%)  فوتگين جي اطلاع ڏني آهي مهرباني ڪري ان جي باري ۾ تفصيل سان ٻڌايو؟</string>

    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_maps">Map</string>

    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me"> MY DEVICE NAME </string>
    <string name="label_peers">NEAR-BY DEVICES</string>
    <string name="empty">" "</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="enable_p2p_button">Enable Wifi</string>
    <string name="discover_peers_button">Find Near-By Devices</string>
    <string name="country_prompt">Choose a country</string>
    <string name="txtName"> qwertyuiop asdfghjkl zxcvbnm QWERTYUIOP ASDFGHJKL ZXCVBNM </string>
    <string name="add_household">Add Household</string>
    <string name="goto_next_structure">Goto Next Structure</string>
    <string name="change_enumeration_block">Change Enumeration Block</string>
    <string name="logout">Logout</string>
    <string name="add_new_family">Add New Family</string>
    <string name="add_next_family">Add Next Family</string>
    <string name="cluster_number">Area number</string>
    <string name="check">CHECK</string>
    <string name="start_line_listing">Start Line Listing</string>
    <string name="sync_listing">Sync Listing</string>
    <string name="open_db_manager">Open DB Manager</string>
    <string name="copy_data_to_sdcard">Copy Data to SDCard</string>
    <string name="records_summary">Records Summary</string>
    <string name="new_version_of_this_app_is_available_for_download">New version of this app is available for download.</string>
    <string name="check_cluster_map">Check Cluster Map</string>
    <string name="a_project_of">A PROJECT OF</string>
    <string name="aga_khan_logo">Aga Khan LOGO</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>

</resources>