<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tmkmid_hhlisting_app.activities.ui.FamilyListingActivity" />

        <variable
            name="member"
            type="edu.aku.hassannaqvi.tmkmid_hhlisting_app.otherClasses.models.Members" />
    </data>


    <ScrollView
        style="@style/i_scrollview"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:layoutDirection="rtl"
        android:scrollbarSize="10dip"
        android:textDirection="rtl"
        tools:context=".activities.ui.FamilyListingActivity">

        <LinearLayout
            android:id="@+id/activity_household_listing"
            style="@style/linearlayout_view">


            <androidx.cardview.widget.CardView
                android:id="@+id/deleteHHcv"
                style="@style/cardView"
                android:layout_marginTop="24dp">

                <LinearLayout style="@style/hlinearlayout">

                    <TextView
                        android:id="@+id/txtTeamNoWithFam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:text="@{member.txtTeamNoWithFam}"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/deleteHH"
                style="@style/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="-1"
                android:text="@string/delete"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/fldGrpSecB01"
                style="@style/vlinearlayout">


                <androidx.cardview.widget.CardView
                    android:id="@+id/hh08cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh08" />

                        <EditText
                            android:id="@+id/hh08"
                            style="@style/EditTextAlpha"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/name"
                            android:maxLength="24" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh09cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh09" />

                        <EditText
                            android:id="@+id/hh09"
                            style="@style/EditTextAlpha"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/name"
                            android:maxLength="24" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh16cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh15" />

                        <EditText
                            android:id="@+id/hh16"
                            style="@style/EditTextAlpha"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/hh15"
                            android:maxLength="24" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh14cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/hlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/hh16" />


                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/hh14"
                            style="@style/EditTextNum"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:hint="@string/hh16"
                            android:maxLength="2"
                            android:onTextChanged="@{callback.onTextChangedHH14}"
                            app:maxValue="99"
                            app:minValue="1"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh10cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh10" />

                        <RadioGroup
                            android:id="@+id/hh10"
                            style="@style/hradiogroup">

                            <RadioButton
                                android:id="@+id/hh10a"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/hh10b"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh11cv"
                    style="@style/cardView"
                    android:visibility="@{hh10a.checked ? View.VISIBLE : View.GONE}">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh10" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/hh11"
                            style="@style/EditTextNum"
                            android:hint="@string/hh10a"
                            android:maxLength="2"
                            android:text='@{hh10a.checked ? hh11.getText().toString() : ""}'
                            app:maxValue="20"
                            app:minValue="1"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh12cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh12" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/hh12"
                            style="@style/EditTextNum"
                            android:hint="@string/hh10a"
                            android:maxLength="2"
                            app:maxValue="99"
                            app:minValue="0"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh13cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh13" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/hh13"
                            style="@style/EditTextNum"
                            android:hint="@string/hh10a"
                            android:maxLength="2"
                            app:maxValue="99"
                            app:minValue="0"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--hh17-->
                <androidx.cardview.widget.CardView
                    android:id="@+id/hh17cv"
                    style="@style/cardView">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh17" />

                        <RadioGroup
                            android:id="@+id/hh17"
                            style="@style/hradiogroup">

                            <RadioButton
                                android:id="@+id/hh17a"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/yes" />

                            <RadioButton
                                android:id="@+id/hh17b"
                                style="@style/radiobutton"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:text="@string/no" />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh18cv"
                    style="@style/cardView"
                    android:visibility="@{hh17b.checked ? View.GONE : View.VISIBLE}">

                    <LinearLayout style="@style/vlinearlayout">

                        <TextView
                            style="@style/i_textview"
                            android:text="@string/hh18" />

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/hh18"
                            style="@style/EditTextNum"
                            android:hint="@string/hh10a"
                            android:maxLength="2"
                            android:onTextChanged="@{callback.onTextChangedHH18}"
                            android:text='@{hh17a.checked ? hh18.getText().toString() : ""}'
                            app:maxValue="10"
                            app:minValue="1"
                            app:type="range" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/hh19cv"
                    style="@style/cardView">

                    <LinearLayout
                        android:id="@+id/ll19Items"
                        style="@style/vlinearlayout">

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/hhIsNewFamcv"
                    style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view_wt_bound">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/hhIsNewFam"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/_8sdp"
                            android:tag="-1"
                            android:text="@string/hhIsNewFam"
                            android:textColor="@color/colorPrimaryDark"
                            android:textOff="@string/no"
                            android:textOn="@string/yes"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <Button
                android:id="@+id/btnAddNewHousehold"
                style="@style/button"
                android:onClick="@{() -> callback.onBtnAddNewHouseHoldClick()}"
                android:text="@string/add_new_family"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnAddFamily"
                style="@style/button"
                android:onClick="@{() -> callback.onBtnAddFamilyClick()}"
                android:text="@string/add_next_family"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnAddHousehold"
                style="@style/button"
                android:onClick="@{() -> callback.onBtnAddHouseholdClick()}"
                android:text="@string/goto_next_structure"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</layout>